PWEB-6466 - IE cannot play wav files.

--- a/Asteroids/sound/attributions.html
+++ b/Asteroids/sound/attributions.html
@@ -7,7 +7,7 @@
     </head>
 
     <body>
-        <h4>The PureWeb&#174; HTML5 Asteroids sample application uses these sound clips:</h4>
+        <h4>The PureWeb&#174; HTML5 Asteroids sample application uses these sound clips dervied from:</h4>
         <ul>
             <li>Torpedo fired: <a href="http://www.freesound.org/people/bubaproducer/sounds/151013/">"Laser Classic Shot 2"</a> by <a href="http://www.freesound.org/people/bubaproducer/">bubaproducer</a> is licensed under <a href="http://creativecommons.org/licenses/by/3.0/">CC BY 3.0</a></li>
             <li>Asteroid explosion: <a href="http://www.freesound.org/people/Nbs%20Dark/sounds/94185/">"Explosion.wav"</a> by <a href="http://www.freesound.org/people/Nbs%20Dark/">Nbs Dark</a> is licensed under <a href="http://creativecommons.org/publicdomain/zero/1.0/">CC0 1.0</a></li>
@@ -17,5 +17,6 @@
             <li>Ship-ship collision with shields up: <a href="http://www.freesound.org/people/juskiddink/sounds/140867/">"boing.wav"</a> by <a href="http://www.freesound.org/people/juskiddink/">juskiddink</a> is licensed under <a href="http://creativecommons.org/licenses/by/3.0/">CC BY 3.0</a></li>
             <li>Game over: <a href="http://www.freesound.org/people/kirbydx/sounds/175409/">"wah wah sad trombone.wav"</a> by <a href="http://www.freesound.org/people/kirbydx/">kirbydx</a> is licensed under <a href="http://creativecommons.org/publicdomain/zero/1.0/">CC0 1.0</a></li>
         </ul>
+        <h4>The orignal WAV files have been converted to MP3 format for reasons of browser compatibility.</h4>
     </body>
 </html>
