--- a/Asteroids/index.html
+++ b/Asteroids/index.html
@@ -20,7 +20,10 @@
             <button id="setNameButton" onclick="getName();">Set Name</button>
             <button id="attributionsButton" onclick="window.open('./sound/attributions.html')">Attributions</button>            
             <button id="shareButton" onclick="generateShareUrl();">Share</button>
-            <div id="fps-counter" class="fps-counter">FPS:</div>
+            <div id="fps-counter" class="profiler">Fps:</div>
+            <div id="latency-counter" class="profiler">Ping:</div>
+            <div id="bandwidth-counter" class="profiler">Mbps:</div>
+            <div id="encoder-type" class="profiler">Mime:</div>
         </div>
 
 		<!-- Start of diagnostics panel -->
