--- a/Scribble/index.html
+++ b/Scribble/index.html
@@ -5,12 +5,12 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
         <title>PureWeb&#174; HTML5 Scribble App Sample</title>
-        <script src="./bower_components/shake.js/shake.js"></script>
-        <script src="./lib/pureweb/pureweb.min.js"></script> 
+        <script src="%PUREWEB_BASE_PATH%/bower_components/shake.js/shake.js"></script>
+        <script src="%PUREWEB_BASE_PATH%/lib/pureweb/pureweb.min.js"></script> 
         <!-- Include app specific code --> 
-        <script src="./js/ScribbleApp.js"></script> 
-        <script src="./lib/pureweb/pureweb.sodium.min.js"></script>
-        <link rel="stylesheet" href="./css/ScribbleApp.css"> 
+        <script src="%PUREWEB_BASE_PATH%/js/ScribbleApp.js"></script> 
+        <script src="%PUREWEB_BASE_PATH%/lib/pureweb/pureweb.sodium.min.js"></script>
+        <link rel="stylesheet" href="%PUREWEB_BASE_PATH%/css/ScribbleApp.css"> 
 
     </head>
     <body onLoad="startScribble();">
@@ -33,6 +33,6 @@
             <!-- This defines the view -->
             <div id="ScribbleView" class="purewebview" ></div>
         </div>
-        <script src="./lib/pureweb/pureweb.h264.min.js"></script>
+        <script src="%PUREWEB_BASE_PATH%/lib/pureweb/pureweb.h264.min.js"></script>
     </body>
 </html>
