PWEB-6658 - Port View.dispose from PW 4.3.1 PWEB-6880 - Port take focus on create from PW 4.3.1

--- a/DDx/index.html
+++ b/DDx/index.html
@@ -214,6 +214,7 @@
             <div class="goog-inline-block">
                 <button id="btnSaveScreen" onClick="ddxclient.onSaveScreenShotClicked();">Save Screenshot</button>
                 <button id="btnClearMarkupPGView" onClick="ddxclient.onClearMarkupClicked();">Clear Markup</button>
+                <button id="btnBlinkPGView" onClick="ddxclient.onBlinkPGViewClicked(500);">Blink View</button>
                 <input id="chkAsyncImgGen" type="checkbox" onClick="ddxclient.booleanAppStateHandler(this);">AsyncImageGeneration</input>
                 <input id="chkUseDeferredRendering" type="checkbox" checked="checked" onClick="ddxclient.booleanAppStateHandler(this);">UseDeferredRendering</input>
                 <input id="chkUseClientSize" type="checkbox" checked="checked"onClick="ddxclient.booleanAppStateHandler(this);">UseClientSize</input>
