PWEB-7286 - Toggle share button between Share/Unshare to create/invalidate shares

--- a/Scribble/index.html
+++ b/Scribble/index.html
@@ -22,7 +22,7 @@
             <div id="controls">
                 <div style="float:right;">
                     <button style="float: right;" onclick="clearCanvas();">Erase All</button>
-                    <button style="float: right; "onclick="generateShareUrl();">Share</button>
+                    <button id="btnShare" style="float: right; "onclick="generateShareUrl();">Share</button>
                     <div id="fps-counter" class="profiler">Fps:</div>
                     <div id="latency-counter" class="profiler">Ping:</div>
                     <div id="bandwidth-counter" class="profiler">Mbps:</div>
